--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,3 +1,12 @@
 page-profile {
+    .profile-picture{
+        width: 100px;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;        
+    }
 
+    h1{
+        text-align: center;
+    }
 }
